[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = ""
authors = ["Calvin Tran"]
readme = "README.md"
packages = [{include = "ml_playground"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
